--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,65 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="ion-padding ion-no-border">
+  <div class="imgLogo">
+    <img src="../../assets/logotipo2.png" alt="">
+  </div>
+  <ion-refresher slot="fixed" [pullFactor]="0.5" [pullMin]="100" [pullMax]="200" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  <div class="contentCalculadora">
+    <form class="form" [formGroup]="estudanteForm" (ngSubmit)="SubmitForm()">
+      <mat-form-field appearance="fill">
+        <mat-label>1ª Avaliação</mat-label>
+        <input formControlName="av1" matInput type="text" placeholder="Valor de 0 a 10" onpaste="return false"
+          ondrop="return false" autocomplete="off" maxlength="3"
+          onkeypress="{ return event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57) }">
+        <mat-error *ngIf="VerifyErros('av1')">
+          {{VerifyErros("av1")}}
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>2ª Avaliação</mat-label>
+        <input formControlName="av2" matInput type="text" placeholder="Valor de 0 a 10" onpaste="return false"
+          ondrop="return false" autocomplete="off" maxlength="3"
+          onkeypress="{ return event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57) }">
+        <mat-error *ngIf="VerifyErros('av2')">
+          {{VerifyErros("av2")}}
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>3ª Avaliação</mat-label>
+        <input formControlName="av3" matInput type="text" placeholder="Valor de 0 a 10" onpaste="return false"
+          ondrop="return false" autocomplete="off" maxlength="3"
+          onkeypress="{ return event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57) }">
+        <mat-error *ngIf="VerifyErros('av3')">
+          {{VerifyErros("av3")}}
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>4ª Avaliação: EDAG</mat-label>
+        <input formControlName="edag" matInput type="text" placeholder="Valor de 0 a 10" onpaste="return false"
+          ondrop="return false" autocomplete="off" maxlength="3"
+          onkeypress="{ return event.charCode == 46 || (event.charCode >= 48 && event.charCode <= 57) }">
+        <mat-error *ngIf="VerifyErros('edag')">
+          {{VerifyErros("edag")}}
+        </mat-error>
+      </mat-form-field>
+      <button [disabled]="estudanteForm.invalid" class="sbCalcular">Calcular</button>
+    </form>
+  </div>
+  <div class="BtnPrevisao">
+    <button class="sbPrevisao" (click)="PrevisaoNotas()">Previsão</button>
+  </div>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div *ngIf="estudante || !fecha" class="containerIf">
+    <div class="marginBottom">
+      <app-box-previsao [estudante]='estudante'></app-box-previsao>
+    </div>
+    <div class="mediaSemetre">
+      <app-box-media [estudante]='estudante'></app-box-media>
+    </div>
+  </div>
+  <div class="autor">
+    <h6>Patrick Guilherme Da Silva</h6>
+    <p>Engenheiro de Computação - CIMATEC</p>
   </div>
 </ion-content>
