--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,76 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.imgLogo{
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.imgLogo img{
+  width: 150px;
 }
-
-#container p {
+.marginBottom{
+  margin-bottom: 20px;
+}
+.contentCalculadora, .previsaoNotas{
+  width: 100%;
+  height: auto;
+  padding: 10px;
+  background-color: #f1f1f1;
+  border-radius: 10px;
+  justify-content: center;
+  display: flex;
+}
+.form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 80%;
+}
+.sbCalcular{
+  width: 100%;
+  align-items: center;
+  height: 40px;
+  background-color: #055ea8;
+  border-radius: 10px;
   font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+  font-weight: 600;
+  margin: 10px 0;
 }
-
-#container a {
-  text-decoration: none;
+.BtnPrevisao{
+  margin:20px 0px;
+  width: 100%;
+  justify-content: center;
+  display: flex;
+}
+.sbPrevisao{
+  width: 80%;
+  height: 40px;
+  background-color: #055ea8;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 600;
+}
+.mediaSemetre{
+  width: 100%;
+  height: 300px;
+  background-color: #f1f1f1;
+  border-radius: 10px;
+  justify-content: center;
+  display: flex;
+}
+.autor{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  flex-direction: column;
+}
+.autor h6{
+  color: #c2c2c2;
+  font-weight: bold;
+}
+.autor p{
+  color: #c2c2c2;
+  margin-top: -10px;
 }
